--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "dependencies": {
+    "@types/chai": "^4.1.4",
+    "@types/mocha": "^5.2.5",
+    "chai": "^4.1.2",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
+    "gulp-mocha": "^6.0.0",
     "gulp-tslint": "^8.1.3",
     "gulp-typescript": "^5.0.0-alpha.2",
+    "mocha": "^5.2.0",
     "run-sequence": "^2.2.1",
     "typescript": "^2.9.2"
   }
